k8s/blue/appointment-scheduling-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appointment-scheduling-blue
  labels:
    app: appointment-scheduling
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-scheduling
      version: blue
  template:
    metadata:
      labels:
        app: appointment-scheduling
        version: blue
    spec:
      containers:
        - name: appointment-scheduling
          image: appointment-scheduling:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
