k8s/blue/file-handler-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: file-handler-blue
  labels:
    app: file-handler
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-handler
      version: blue
  template:
    metadata:
      labels:
        app: file-handler
        version: blue
    spec:
      containers:
        - name: file-handler
          image: file-handler:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
