k8s/blue/medi-track-gateway-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: medi-track-gateway-blue
  labels:
    app: medi-track-gateway
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medi-track-gateway
      version: blue
  template:
    metadata:
      labels:
        app: medi-track-gateway
        version: blue
    spec:
      containers:
        - name: medi-track-gateway
          image: medi-track-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
