k8s/blue/notification-service-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service-blue
  labels:
    app: notification-service
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
      version: blue
  template:
    metadata:
      labels:
        app: notification-service
        version: blue
    spec:
      containers:
        - name: notification
          image: 061051254585.dkr.ecr.us-east-1.amazonaws.com/notification:<unique-tag>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
