k8s/blue/patient-record-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: patient-record-blue
  labels:
    app: patient-record
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-record
      version: blue
  template:
    metadata:
      labels:
        app: patient-record
        version: blue
    spec:
      containers:
        - name: patient-record-service
          image: patient-record-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
