k8s/blue/appointment-scheduling-service-blue.yaml
# appointment-scheduling-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: appointment-scheduling-blue
spec:
  selector:
    app: appointment-scheduling
    version: blue
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
