k8s/blue/medi-track-gateway-service-blue.yaml
# medi-track-gateway-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: medi-track-gateway-blue
  labels:
    app: medi-track-gateway
    version: blue
spec:
  selector:
    app: medi-track-gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
