k8s/blue/patient-record-service-blue.yaml
# patient-record-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-record-blue
spec:
  selector:
    app: patient-record
    version: blue
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
