k8s/blue/Ingress-Load-balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medi-track
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: medi-track-gateway-blue
              port:
                number: 3000
